# parcellab_challenge

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  create_shipments.py  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml  task.md
docker/: Dockerfile
src/: __init__.py  main.py
src/api/: __init__.py
src/api/routes/: shipments.py
src/api/schemas/: shipment.py
src/config/: logging.py  redis.py
src/db/: __init__.py  enums.py  session.py  shipments_repo.py
src/db/alembic/: env.py
src/db/alembic/versions/: 2025_04_22_2143-dcb68c87f04d_initial_migration.py
src/db/models/: shipment.py
src/services/: weather_service.py
tests/: conftest.py
tests/api/: test_create_shipment.py  test_shipments.py
